<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="character"
            type="com.pekyurek.emircan.presentation.core.data.model.character.Character" />

        <variable
            name="viewModel"
            type="com.pekyurek.emircan.presentation.ui.detail.character.CharacterDetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        loadImageFromUrl="@{character.image}"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:scaleType="fitXY"
                        android:transitionName="@{character.imageTransitionId}"
                        app:layout_collapseMode="parallax"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="pin" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.pekyurek.emircan.presentation.core.widget.InfoRowView
                    android:id="@+id/irvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@{character.name}"
                    app:title="@string/label_name" />

                <com.pekyurek.emircan.presentation.core.widget.InfoRowView
                    android:id="@+id/irvStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@{character.status}"
                    app:title="@string/label_status" />

                <com.pekyurek.emircan.presentation.core.widget.InfoRowView
                    android:id="@+id/irvSpecies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@{character.species}"
                    app:title="@string/label_species" />

                <com.pekyurek.emircan.presentation.core.widget.InfoRowView
                    android:id="@+id/irvEpisodeCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@{String.valueOf(character.episode.size)}"
                    app:title="@string/label_episode_count" />

                <com.pekyurek.emircan.presentation.core.widget.InfoRowView
                    android:id="@+id/irvGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@{character.gender}"
                    app:title="@string/label_gender" />

                <com.pekyurek.emircan.presentation.core.widget.InfoRowView
                    android:id="@+id/irvOriginLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@{character.origin.name}"
                    app:title="@string/label_origin_location" />

                <com.pekyurek.emircan.presentation.core.widget.InfoRowView
                    android:id="@+id/irvLastKnownLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@{character.location.name}"
                    app:title="@string/label_last_known_location" />


                <com.pekyurek.emircan.presentation.core.widget.InfoRowView
                    android:id="@+id/irvLastEpisodeNameAndAirDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.lastEpisode != null ? View.VISIBLE : View.GONE}"
                    app:description="@{@string/two_texts_separated_by_commas(viewModel.lastEpisode.name,viewModel.lastEpisode.airDate)}"
                    app:title="@string/label_last_episode_and_air_date" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbDetailFavorite"
                    addOrRemoveCharacterFavorite="@{character.id}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/material_vertical_list_padding"
                    android:text="@string/label_add_to_favorite" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>